--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ ext{
     multidex_version = "2.0.1"
     glideVersion = '4.11.0'
     fontVersion = '0.0.5'
+    room_version = "2.5.0-alpha02"
 }
 dependencies {
 
@@ -95,6 +96,11 @@ dependencies {
 
     //logging interceptor
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
+
+    //room db
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 }
 
 kapt {
