--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,15 +15,15 @@ android {
         applicationId "com.shashifreeze.mvvm_di_templete"
         minSdkVersion 23
         targetSdkVersion 33
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -38,6 +38,12 @@ android {
     buildFeatures {
         viewBinding true
         dataBinding true
+    }
+
+    bundle {
+        storeArchive {
+            enable = false
+        }
     }
 }
 ext{
