--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,10 +12,10 @@ android {
     buildToolsVersion "33.0.0"
 
     defaultConfig {
-        applicationId "com.shashifreeze.mvvm_di_templete"
+        applicationId "me.appopen"
         minSdkVersion 23
         targetSdkVersion 33
-        versionCode 2
+        versionCode 1
         versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -23,6 +23,11 @@ android {
 
     buildTypes {
         release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -38,12 +43,6 @@ android {
     buildFeatures {
         viewBinding true
         dataBinding true
-    }
-
-    bundle {
-        storeArchive {
-            enable = false
-        }
     }
 }
 ext{
